# fastapi-demo

./: .env.example  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  docker-compose.yml  init.sh  main.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 155d8678de49_initial_migration_create_cars_table.py
car/: car_controller.py  car_interfaces.py  car_model.py  car_service.py
db/: engine.py
